# MeTIOTCommunication

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
docs/: API_REFERENCE.md  DeviceProtocol.md  HowToUse.md  PYTHON_LIB_GUIDE.md  Protocol.md  TCPCommunicationProtocol.md  TCP_PROTOCOL_SPEC.md
examples/simple_client/: main.py
src/MeTIOTCommunication/: CMakeLists.txt
src/MeTIOTCommunication/include/: client.hpp  socket_core.hpp
src/MeTIOTCommunication/include/core/: exceptions.hpp  socket_core.hpp
src/MeTIOTCommunication/include/interfaces/: event_handler.hpp
src/MeTIOTCommunication/include/protocol/: abstract_protocol.hpp  device_agnostic_protocol.hpp  fish_tank_protocol.hpp  protocol_constants.hpp  tank_guardian_protocol.hpp
src/MeTIOTCommunication/include/security/: aes_encryption.hpp  ecdh_manager.hpp
src/MeTIOTCommunication/include/utils/: byte_conversion.hpp  cobs.hpp  crc.hpp
src/MeTIOTCommunication/src/: client.cpp
src/MeTIOTCommunication/src/core/: socket_core.cpp
src/MeTIOTCommunication/src/protocol/: abstract_protocol.cpp  device_agnostic_protocol.cpp  fish_tank_protocol.cpp  tank_guardian_protocol.cpp
src/MeTIOTCommunication/src/security/: aes_encryption.cpp  ecdh_manager.cpp
src/MeTIOTCommunication/src/utils/: byte_conversion.cpp  cobs.cpp  crc.cpp
src/python_bindings/: CMakeLists.txt  PythonEventHandler.hpp  bindings.cpp
